[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Slug/Gun Arm/gun_arm_cannonB.png" type="Texture" id=1]
[ext_resource path="res://assets/Slug/Gun Arm/gun_arm_bi.png" type="Texture" id=2]
[ext_resource path="res://assets/Slug/Gun Arm/gun_arm_cannonA.png" type="Texture" id=3]
[ext_resource path="res://GunArm.gd" type="Script" id=4]
[ext_resource path="res://assets/Slug/Gun Arm/gun_projectile.png" type="Texture" id=5]
[ext_resource path="res://SlimeBall.tscn" type="PackedScene" id=6]

[node name="GunAttachment" type="Node2D"]
rotation = -1.5708
script = ExtResource( 4 )
slime_color = Color( 0.184314, 0.537255, 0.192157, 1 )
left = true
slime_inst = ExtResource( 6 )

[node name="base" type="Position2D" parent="."]

[node name="GunArmBi" type="Sprite" parent="base"]
position = Vector2( 10, 0 )
scale = Vector2( 1, -1 )
texture = ExtResource( 2 )

[node name="Cannon" type="KinematicBody2D" parent="."]
position = Vector2( 23, 17 )

[node name="GunArmCannonA" type="Sprite" parent="Cannon"]
position = Vector2( 7.83411, -0.0243073 )
rotation = -1.5708
scale = Vector2( 1.1, -1.1 )
texture = ExtResource( 3 )

[node name="BallSpawn" type="Position2D" parent="Cannon"]
position = Vector2( 16, 0 )

[node name="GunProjectile" type="Sprite" parent="Cannon"]
visible = false
position = Vector2( 16, 0 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="GunArmCannonB" type="Sprite" parent="Cannon"]
position = Vector2( 8, 0 )
rotation = -1.5708
scale = Vector2( 1.1, -1.1 )
texture = ExtResource( 1 )

[node name="restPos" type="Position2D" parent="."]
position = Vector2( 23, 17 )

[node name="knockPos" type="Position2D" parent="."]
position = Vector2( 23, 3.8147e-06 )
